fixing navbar anchors deco

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -10,29 +10,33 @@ nav
 	margin : 0px;
 	padding: 0px;
 
-	background-color:DodgerBlue;
+	background-color: DodgerBlue;
 	flex-wrap: wrap;
-	justify-content:flex-end;
+	justify-content: flex-end;
 }
 nav > span
 {
 	margin: 10px;
 	margin-right: auto;
 	padding: 20px;
-	font-size:20px;
+	font-size: 20px;
 	font-weight: bold;
+
 }
 nav > a
 {
-	background-color:DodgerBlue;
+	background-color: DodgerBlue;
 	margin : 10px;
 	padding : 20px;
-	font-size:20px;
-	font-weight:bold;
-	
+	font-size: 20px;
+	font-weight: bold;
+
+	text-decoration: none;
+	color: black;
 }
 
 nav > a:hover
 {
 	background-color:white;
+	color: DodgerBlue;
 }
